--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-gd": "*",
+        "artesaos/seotools": "^0.22.0",
         "cloudinary/cloudinary_php": "1.20",
         "doctrine/dbal": "^3.1",
         "fakerphp/faker": "^1.9.1",
@@ -26,11 +27,11 @@
         "sentry/sentry-laravel": "^2.12",
         "sineld/bladeset": "^5.6",
         "smknstd/fakerphp-picsum-images": "^1.0",
+        "spatie/laravel-analytics": "^4.0.1",
         "torann/currency": "^1.1",
         "torann/geoip": "^3.0",
         "wildbit/swiftmailer-postmark": "^3.3",
-        "yabacon/paystack-php": "^2.2",
-        "spatie/laravel-analytics": "^4.0.1"
+        "yabacon/paystack-php": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
